# bddk-mcp

./: .env.example  .env.oci.example  .gitignore  .mcp.json  CLAUDE.md  Caddyfile  DOCUMENTS.md  Dockerfile  Dockerfile.spaces  LICENSE  Procfile  README.md  __init__.py  analytics.py  backfill.py  client.py  config.py  data_sources.py  deps.py  doc_store.py  doc_sync.py  docker-compose.oci.yml  docker-compose.yml  exceptions.py  html_extractor.py  logging_config.py  metrics.py  models.py  ocr_backends.py  ocr_backends_chandra.py  pyproject.toml  quality_scan.py  railway.toml  seed.py  server.py  sync_all.py  utils.py  vector_store.py
.claude/: settings.json
.github/workflows/: ci.yml
benchmark/: __init__.py  __main__.py  config.py  graders.py  nli_dataset.py  phase1_nli.py  phase1_terms.py  phase1_tools.py  phase2_e2e.py  phase3_prompts.py  report.py  run.py  scoring.py  terminology.py  test_cases.py  tool_schemas.py
data/bddk_nli/: metadata.json  pairs.json
docs/: PLAN-doc-store.md  hibrit-arama-siralamasi.md
docs/superpowers/plans/: 2026-04-11-server-restructure.md  2026-04-15-context-window-measurement.md  2026-04-16-bddk-mcp-chromadb.md  2026-04-17-mevzuat-bulk-backfill-plan.md  2026-04-17-mevzuat-formula-extraction-lightocr-plan.md  2026-04-18-chandra2-primary-ocr.md  2026-04-23-patch-doc-helper-plan.md
docs/superpowers/specs/: 2026-04-11-server-restructure-design.md  2026-04-14-foundation-first-design.md  2026-04-15-context-window-measurement-design.md  2026-04-16-bddk-mcp-chromadb-design.md  2026-04-17-mevzuat-bulk-backfill-design.md  2026-04-17-mevzuat-formula-extraction-lightocr-design.md  2026-04-18-chandra2-primary-ocr-design.md  2026-04-23-patch-doc-helper-design.md
scripts/: backfill_mevzuat.py  clean_seed_scope.py  compare_ocr_backfill.py  extract_fixture_pdf.py  inventory_dropped_formulas.py  mcp_fetch_full.py  mcp_smoke.py  patch_doc.py  patch_md.py  pilot_resync.py  pull_benchmark_models.ps1  regen_chunks_seed.py  resync_corrupted_mevzuat.py  smoke_chandra_hf.py  snapshot_mevzuat_markdown.py  validate_all_docs.py  validate_all_pages.py
seed_data/: decision_cache.json
tests/: __init__.py  conftest.py  test_analytics.py  test_backfill.py  test_benchmark_config.py  test_benchmark_graders.py  test_benchmark_schemas.py  test_benchmark_scoring.py  test_chandra_smoke.py  test_circuit_breaker.py  test_client.py  test_compare_ocr_backfill.py  test_config.py  test_data_sources.py  test_deps.py  test_doc_store.py  test_doc_sync.py  test_doc_sync_reindex.py  test_exceptions.py  test_f1_score.py  test_fts_sanitization.py  test_helpers.py  test_improvements.py  test_integration.py  test_integration_lightocr.py  test_lifecycle.py  test_ocr_backends.py  test_ocr_backends_chandra.py  test_patch_doc.py  test_patch_md.py  test_quality_scan.py  test_search.py  test_seed.py  test_server_fallback.py  test_shared_http.py  test_tools_admin.py  test_tools_analytics.py  test_tools_bulletin.py  test_tools_documents.py  test_tools_search.py  (+2 more)
tools/: __init__.py  admin.py  analytics.py  bulletin.py  documents.py  search.py  sync.py
