[project]
name = "bddk-mcp"
version = "4.0.0"
description = "MCP server for BDDK regulatory intelligence — search, analytics, and monitoring"
requires-python = ">=3.11,<3.14"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "markitdown[pdf]>=0.1",
    "beautifulsoup4>=4.12",
    "aiosqlite>=0.20",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
