[project]
name = "bddk-mcp"
version = "5.0.0"
description = "MCP server for BDDK regulatory intelligence — search, analytics, and monitoring (PostgreSQL + pgvector)"
requires-python = ">=3.11,<3.14"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "markitdown[pdf]>=0.1",
    "beautifulsoup4>=4.12",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "numpy>=1.26",
    "sentence-transformers>=5.0",
    "uvloop>=0.22.1; sys_platform != 'win32'",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
gpu = [
    "nougat-ocr>=0.1.17",
    "torch>=2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # function call in default argument — common with FastMCP
]

[tool.ruff.lint.isort]
known-first-party = ["client", "config", "models", "doc_store", "vector_store", "doc_sync", "data_sources", "analytics", "exceptions", "logging_config"]
