[project]
name = "bddk-mcp"
version = "5.0.0"
description = "MCP server for BDDK regulatory intelligence — search, analytics, and monitoring (PostgreSQL + pgvector)"
requires-python = ">=3.12,<3.14"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "markitdown[pdf]>=0.1",
    "beautifulsoup4>=4.12",
    "asyncpg>=0.30",
    "sentence-transformers>=5.0",
    "uvloop>=0.22.1; sys_platform != 'win32'",
    "anthropic>=0.40",
    "transformers>=4.50",
    "pdf2image>=1.17",
    "pillow>=10.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
    "ruff>=0.8",
    "pdfplumber>=0.11",
]
gpu = [
    "torch>=2.0",
    "torchvision>=0.15",
    "chandra-ocr[hf]>=0.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
addopts = "-m 'not gpu'"
markers = [
    "gpu: requires CUDA GPU (skipped in CI)",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # function call in default argument — common with FastMCP
]

[tool.ruff.lint.isort]
known-first-party = ["client", "config", "models", "doc_store", "vector_store", "doc_sync", "data_sources", "analytics", "exceptions", "logging_config"]
